# ffsubsync-cpp

./: .gitignore  CMakeLists.txt  README.md  setup.sh
cmake/: FFmpegAndroid.cmake
docs/: ANDROID_NOTES.md  API_DESIGN.md  ARCHITECTURE.md  CODE_MAP.md  DEPENDENCIES.md  IMPLEMENTATION_ROADMAP.md  TESTING_STRATEGY.md
docs/adr/: 001-vad-dependency.md
ffmpeg-build/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
ffmpeg-build/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
ffmpeg-build/x86/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
ffmpeg-build/x86_64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
include/ffsubsync/: aligner.h  constants.h  ffmpeg_audio_decoder.h  logging.h  srt_parser.h  subtitle_speech.h  subtitle_transformer.h  types.h  vad_processor.h
src/aligners/: fft_aligner.cpp  golden_section_search.cpp  max_score_aligner.cpp
src/cli/: main.cpp
src/core/: pipeline.cpp
src/jni/: subtitlesync_jni.cpp
src/media/: ffmpeg_audio_decoder.cpp
src/speech/: subtitle_speech.cpp  vad_processor.cpp
src/subtitles/: srt_parser.cpp  subtitle_transformer.cpp
tests/: main.cpp  test_ffmpeg_audio_decoder.cpp  test_fft_aligner.cpp  test_srt_parser.cpp  test_subtitle_speech.cpp  test_vad_processor.cpp
